--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>MANJATTI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <style>
@@ -30,7 +29,7 @@
       overflow: hidden;
     }
 
-    /* ===== Animated Background ===== */
+    /* ===== Background ===== */
     .bg {
       position: fixed;
       inset: 0;
@@ -46,16 +45,23 @@
       to { transform: scale(1.05) translateY(-10px); }
     }
 
-    /* ===== Dual Credits Layout ===== */
+    /* ===== Credits Near Center ===== */
     .credits-wrapper {
       position: fixed;
       inset: 0;
       display: flex;
-      justify-content: space-between;
-      padding: 0 5vw;
+      justify-content: center;
+      align-items: center;
       pointer-events: none;
       z-index: -1;
-      opacity: 0.10;
+      opacity: 0.12;
+    }
+
+    .credits-inner {
+      width: 60vw;
+      max-width: 900px;
+      display: flex;
+      justify-content: space-between;
     }
 
     .column {
@@ -151,52 +157,39 @@
 
   <div class="bg"></div>
 
-  <!-- Dual scrolling names -->
+  <!-- Credits -->
   <div class="credits-wrapper">
+    <div class="credits-inner">
 
-    <!-- LEFT (scroll up) -->
-    <div class="column scroll-up">
-      <span>AARAV</span>
-      <span>ADITYA</span>
-      <span>ANANYA</span>
-      <span>DIYA</span>
-      <span>ROHAN</span>
-      <span>VISHNU</span>
-      <span>ARYAN</span>
-      <span>KRISHNA</span>
-      <span>NIHAL</span>
-      <span>SNEHA</span>
-      <span>AARAV</span>
-      <span>ADITYA</span>
-      <span>ANANYA</span>
-      <span>DIYA</span>
-      <span>ROHAN</span>
-      <span>VISHNU</span>
+      <div class="column scroll-up">
+        <span>AARAV</span>
+        <span>ADITYA</span>
+        <span>ANANYA</span>
+        <span>DIYA</span>
+        <span>ROHAN</span>
+        <span>VISHNU</span>
+        <span>ARYAN</span>
+        <span>KRISHNA</span>
+        <span>NIHAL</span>
+        <span>SNEHA</span>
+      </div>
+
+      <div class="column scroll-down">
+        <span>ARYAN</span>
+        <span>KRISHNA</span>
+        <span>NIHAL</span>
+        <span>SNEHA</span>
+        <span>AARAV</span>
+        <span>ADITYA</span>
+        <span>ANANYA</span>
+        <span>DIYA</span>
+        <span>ROHAN</span>
+        <span>VISHNU</span>
+      </div>
+
     </div>
-
-    <!-- RIGHT (scroll down) -->
-    <div class="column scroll-down">
-      <span>ARYAN</span>
-      <span>KRISHNA</span>
-      <span>NIHAL</span>
-      <span>SNEHA</span>
-      <span>AARAV</span>
-      <span>ADITYA</span>
-      <span>ANANYA</span>
-      <span>DIYA</span>
-      <span>ROHAN</span>
-      <span>VISHNU</span>
-      <span>ARYAN</span>
-      <span>KRISHNA</span>
-      <span>NIHAL</span>
-      <span>SNEHA</span>
-      <span>AARAV</span>
-      <span>ADITYA</span>
-    </div>
-
   </div>
 
-  <!-- Center content -->
   <div class="container">
     <h1>2K25-26</h1>
     <p>This redirects you 2 the scanner page</p>
